--- a/app/views/layouts/_cocktail-list.html.erb
+++ b/app/views/layouts/_cocktail-list.html.erb
@@ -14,7 +14,9 @@
         </div>
 
         <% if cocktail.user.avatar.attached? %>
-          <%= cl_image_tag cocktail.user.avatar.key, class: "card-cocktail-user avatar avatar-small avatar-round dropdown-toggle" %></div>
+          <%= image_tag("https://cdn.pixabay.com/photo/2016/09/01/08/24/smiley-1635449_960_720.png", class: "card-cocktail-user avatar avatar-small avatar-round dropdown-toggle") %></div>
+
+          <%#= cl_image_tag cocktail.user.avatar.key, class: "card-cocktail-user avatar avatar-small avatar-round dropdown-toggle" %></div>
         <% else %>
           <%= image_tag("https://cdn.pixabay.com/photo/2016/09/01/08/24/smiley-1635449_960_720.png", class: "card-cocktail-user avatar avatar-small avatar-round dropdown-toggle") %></div>
         <% end %>
